fix: add hovers, actives, focuses affects

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#" class="nav__link">Контакты</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link nav__search"></a>
+                        <a href="#" class="nav__search"></a>
                     </li>
                 </ul>
             </nav>
@@ -305,15 +305,9 @@
                     </ul>
                 </nav>
                 <div class="footer__social">
-                    <a href="#" class="footer__social-item">
-                        <img src="/icons/facebook.svg" alt="Facebook" class="footer__social-icon">
-                    </a>
-                    <a href="#" class="footer__social-item">
-                        <img src="/icons/vk.svg" alt="VK" class="footer__social-icon">
-                    </a>
-                    <a href="#" class="footer__social-item">
-                        <img src="/icons/instagram.svg" alt="Instagram" class="footer__social-icon">
-                    </a>
+                    <a href="#" class="footer__social-item"></a>
+                    <a href="#" class="footer__social-item"></a>
+                    <a href="#" class="footer__social-item"></a>
                 </div>
             </div>
             <div class="footer__column footer__column_second">
