fix: add adaptive to mobile

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <header class="header">
         <div class="container header__container">
+            <div class="hamburger">
+                <span class="hamburger__item"></span>
+                <span class="hamburger__item"></span>
+                <span class="hamburger__item"></span>
+            </div>
+
             <div class="logo header__logo">
                 <a href="#" class="logo-link header__logo-link">
                     <img src="/icons/logo.png" alt="Евклид - проектные системы" class="logo-img header__logo-img">
@@ -33,16 +39,15 @@
                     <li class="nav__item">
                         <a href="#" class="nav__link">Контакты</a>
                     </li>
-                    <li class="nav__item">
-                        <a href="#" class="nav__search"></a>
-                    </li>
                 </ul>
             </nav>
+
+            <a href="#" class="header__search nav__search"></a>
         </div>
     </header>
 
     <main>
-        <section class="promo">
+        <section class="section promo">
             <div class="container">
                 <div class="promo__slider">
                     <h1 class="promo__title">
@@ -61,7 +66,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="section about">
             <div class="container about__container">
                 <h2 class="container__title">О нас</h2>
                 <p class="about__descr">
@@ -107,7 +112,7 @@
             </div>
         </section>
 
-        <section class="how">
+        <section class="section how">
             <div class="container how__container">
                 <h2 class="container__title">
                     Как мы работаем
@@ -206,13 +211,13 @@
             </div>
         </section>
 
-        <section class="faq">
+        <section class="section faq">
             <div class="container">
                 <h2 class="container__title faq__container__title">Часто задаваемые вопросы</h2>
                 <div class="faq__item faq__item-first">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Из чего формируется конечная стоимость проекта?</h3>
-                        <span class="faq__icon"></span>
+                        <div class="faq__icon"></div>
                     </div>
                     <p class="faq__descr">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
@@ -224,7 +229,7 @@
                 <div class="faq__item">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">У меня есть свой проект. Сможем ли мы его доработать / реализовать?</h3>
-                        <span class="faq__icon"></span>
+                        <div class="faq__icon"></div>
                     </div>
                     <p class="faq__descr">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
@@ -236,7 +241,7 @@
                 <div class="faq__item">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Я выбираю между разными компаниями. В чём ваше отличие?</h3>
-                        <span class="faq__icon"></span>
+                        <div class="faq__icon"></div>
                     </div>
                     <p class="faq__descr">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
@@ -248,7 +253,7 @@
                 <div class="faq__item">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?</h3>
-                        <span class="faq__icon"></span>
+                        <div class="faq__icon"></div>
                     </div>
                     <p class="faq__descr">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
@@ -260,7 +265,7 @@
                 <div class="faq__item">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Могу ли я вернуть деньги на каком-либо из этапов работ?</h3>
-                        <span class="faq__icon"></span>
+                        <div class="faq__icon"></div>
                     </div>
                     <p class="faq__descr">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
