fix: add JS and styles to hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
                 <span class="hamburger__item"></span>
             </div>
 
+            <div class="hamburger__menu">
+                <ul class="hamburger__list">
+                    <li class="hamburger__list-item"><a href="#about" class="hamburger__link">О нас</a></li>
+                    <li class="hamburger__list-item"><a href="#" class="hamburger__link">Проекты</a></li>
+                    <li class="hamburger__list-item"><a href="#how" class="hamburger__link">Этапы</a></li>
+                    <li class="hamburger__list-item"><a href="#" class="hamburger__link">Отзывы</a></li>
+                    <li class="hamburger__list-item"><a href="#" class="hamburger__link">Контакты</a></li>
+                </ul>
+            </div>
+
             <div class="logo header__logo">
                 <a href="#" class="logo-link header__logo-link">
                     <img src="/icons/logo.png" alt="Евклид - проектные системы" class="logo-img header__logo-img">
@@ -25,13 +35,13 @@
             <nav class="nav header__nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav__link">О нас</a>
+                        <a href="#about" class="nav__link">О нас</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Проекты</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">Этапы</a>
+                        <a href="#how" class="nav__link">Этапы</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Отзывы</a>
@@ -58,15 +68,15 @@
                     </h3>
                     <a href="#" class="btn promo__btn">Заказать расчёт</a>
                     <div class="dots">
-                        <div class="dots__item dots__item_active"></div>
-                        <div class="dots__item"></div>
-                        <div class="dots__item"></div>
+                        <div class="dots__item dots__item_active" data-path="first"></div>
+                        <div class="dots__item" data-path="second"></div>
+                        <div class="dots__item" data-path="third"></div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="section about">
+        <section class="section about" id="about">
             <div class="container about__container">
                 <h2 class="container__title">О нас</h2>
                 <p class="about__descr">
@@ -112,20 +122,20 @@
             </div>
         </section>
 
-        <section class="section how">
+        <section class="section how" id="how">
             <div class="container how__container">
                 <h2 class="container__title">
                     Как мы работаем
                 </h2>
 
                 <div class="how__menu">
-                    <a href="#" class="how__link how__link-active">1 шаг</a>
-                    <a href="#" class="how__link">2 шаг</a>
-                    <a href="#" class="how__link">3 шаг</a>
-                    <a href="#" class="how__link">4 шаг</a>
+                    <button class="how__link how__link_active" data-path="one">1 шаг</button>
+                    <button class="how__link" data-path="two">2 шаг</button>
+                    <button class="how__link" data-path="three">3 шаг</button>
+                    <button class="how__link" data-path="four">4 шаг</button>
                 </div>
 
-                <div class="how__grid how__grid_active">
+                <div class="how__grid how__grid_active" data-target="one">
                     <div class="how__info">
                         <div class="how__info-text">
                             <h3 class="how__info-title">
@@ -146,7 +156,7 @@
                     </div>
                 </div>
 
-                <div class="how__grid">
+                <div class="how__grid" data-target="two">
                     <div class="how__info">
                         <div class="how__info-text">
                             <h3 class="how__info-title">
@@ -167,7 +177,7 @@
                     </div>
                 </div>
 
-                <div class="how__grid">
+                <div class="how__grid" data-target="three">
                     <div class="how__info">
                         <div class="how__info-text">
                             <h3 class="how__info-title">
@@ -188,7 +198,7 @@
                     </div>
                 </div>
 
-                <div class="how__grid">
+                <div class="how__grid" data-target="four">
                     <div class="how__info">
                         <div class="how__info-text">
                             <h3 class="how__info-title">
@@ -214,60 +224,61 @@
         <section class="section faq">
             <div class="container">
                 <h2 class="container__title faq__container__title">Часто задаваемые вопросы</h2>
-                <div class="faq__item faq__item-first">
+
+                <div class="faq__item faq__item-first" data-path="one">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Из чего формируется конечная стоимость проекта?</h3>
-                        <div class="faq__icon"></div>
+                        <div class="faq__icon" data-icon="one"></div>
                     </div>
-                    <p class="faq__descr">
+                    <p class="faq__descr" data-text="one">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
                         <br><br>
                         Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
                     </p>
                 </div>
 
-                <div class="faq__item">
+                <div class="faq__item" data-path="two">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">У меня есть свой проект. Сможем ли мы его доработать / реализовать?</h3>
-                        <div class="faq__icon"></div>
+                        <div class="faq__icon" data-icon="two"></div>
                     </div>
-                    <p class="faq__descr">
+                    <p class="faq__descr" data-text="two">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
                         <br><br>
                         Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
                     </p>
                 </div>
 
-                <div class="faq__item">
+                <div class="faq__item" data-path="three">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Я выбираю между разными компаниями. В чём ваше отличие?</h3>
-                        <div class="faq__icon"></div>
+                        <div class="faq__icon" data-icon="three"></div>
                     </div>
-                    <p class="faq__descr">
+                    <p class="faq__descr" data-text="three">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
                         <br><br>
                         Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
                     </p>
                 </div>
 
-                <div class="faq__item">
+                <div class="faq__item" data-path="four">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?</h3>
-                        <div class="faq__icon"></div>
+                        <div class="faq__icon" data-icon="four"></div>
                     </div>
-                    <p class="faq__descr">
+                    <p class="faq__descr" data-text="four">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
                         <br><br>
                         Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
                     </p>
                 </div>
 
-                <div class="faq__item">
+                <div class="faq__item" data-path="five">
                     <div class="faq__wrapper">
                         <h3 class="faq__title">Могу ли я вернуть деньги на каком-либо из этапов работ?</h3>
-                        <div class="faq__icon"></div>
+                        <div class="faq__icon" data-icon="five"></div>
                     </div>
-                    <p class="faq__descr">
+                    <p class="faq__descr" data-text="five">
                         Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов.
                         <br><br>
                         Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
@@ -337,5 +348,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
